# WeekendRaytracer

./: README.md
raytracer/: Cargo.toml  README.md
raytracer/src/: camera.rs  color.rs  main.rs  ray.rs
raytracer/src/hittable/: hittable.rs  materials.rs
raytracer/src/hittable/objects/: mod.rs
raytracer/src/math/: mod.rs  vec3.rs
sprite_generator/: Cargo.toml  README.md  cfg.json
sprite_generator/res/: lily.mtl  rook.mtl
sprite_generator/src/: main.rs  time.rs
sprite_generator/src/renderer/: camera.rs  color.rs  mod.rs  ray.rs
sprite_generator/src/renderer/hittable/: hittable.rs  materials.rs  mod.rs
sprite_generator/src/renderer/hittable/objects/: mesh.rs  mod.rs
sprite_generator/src/renderer/math/: mod.rs  number.rs  quartenion.rs  vec3.rs
