[package]
name = "raytracer"
version = "0.1.0"
authors = ["Eric Olson <eric.rob.olson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
rand = "0.7"
rayon = "1.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tobj = "2"